model UserState {
  userId  String @map("user_id") @db.Uuid
  stateId String @map("state_id")

  user                    User                     @relation(fields: [userId], references: [id])
  state                   State                    @relation(fields: [stateId], references: [id])
  userStateDemonstrations UserStateDemonstration[]

  @@id([userId, stateId])
  @@map("user_state")
}
