// Flags: NO_CREATED_TS, NO_UPDATED_TS, NO_HISTORY, NATURAL_KEY
// Table is a static constraint and is updated entirely via migrations
model BundleType {
  id          String @id
  name        String
  description String

  bundle                  Bundle[]
  demonstrationBundleType DemonstrationBundleType[]
  modificationBundleType  ModificationBundleType[]

  @@map("bundle_type")
}
