// Flags: STATIC_CONSTRAINT
model CmcsDivision {
  id String

  demonstration Demonstration[]

  @@id([id])
  @@map("cmcs_division")
}
