model Demonstration {
  id                    String    @db.Uuid
  bundleTypeId          String    @map("bundle_type_id")
  name                  String
  description           String
  effectiveDate         DateTime? @map("effective_date") @db.Date
  expirationDate        DateTime? @map("expiration_date") @db.Date
  cmcsDivisionId        String?   @map("cmcs_division_id")
  signatureLevelId      String?   @map("signature_level_id")
  demonstrationStatusId String    @map("demonstration_status_id")
  stateId               String    @map("state_id")
  projectOfficerUserId  String    @map("project_officer_user_id") @db.Uuid
  createdAt             DateTime  @default(now()) @map("created_at") @db.Timestamptz()
  updatedAt             DateTime  @updatedAt @map("updated_at") @db.Timestamptz()

  bundle                  Bundle                   @relation(fields: [id, bundleTypeId], references: [id, bundleTypeId])
  bundleType              DemonstrationBundleType  @relation(fields: [bundleTypeId], references: [id])
  demonstrationStatus     DemonstrationStatus      @relation(fields: [demonstrationStatusId], references: [id])
  state                   State                    @relation(fields: [stateId], references: [id])
  projectOfficer          User                     @relation(fields: [projectOfficerUserId], references: [id])
  userStateDemonstrations UserStateDemonstration[]
  modification            Modification[]
  cmcsDivision            CmcsDivision?            @relation(fields: [cmcsDivisionId], references: [id], onDelete: Restrict)
  signatureLevel          SignatureLevel?          @relation(fields: [signatureLevelId], references: [id], onDelete: Restrict)

  @@id([id])
  @@unique([id, stateId])
  @@unique([id, bundleTypeId])
  @@map("demonstration")
}
