// Flags: STATIC_CONSTRAINT
model SignatureLevel {
  id String

  demonstration Demonstration[]

  @@id([id])
  @@map("signature_level")
}
