---
title: DEMOS Current Data Model
config:
  theme: default
  layout: elk
  elk:
    nodePlacementStrategy: NETWORK_SIMPLEX
---

erDiagram

  cmcs_division ||--|{ demonstration : "demonstration.cmcs_division_id ∈ cmcs_division.id"
  signature_level ||--|{ demonstration : "demonstration.signature_level_id ∈ signature_level.id"
  document_type ||--|{ document : "document.document_type_id ∈ document_type.id"
  bundle ||--|| modification : "modificaton.(id, bundle_type_id) ∈ bundle.(id, bundle_type_id)"
  document }|--|| bundle : "document.bundle_id ∈ bundle.id"
  document }|--|| users : "document.owner_user_id ∈ users.id"
  modification }|--|| users : "modification.project_officer_user_id ∈ users.id"
  bundle }|--|| bundle_type : "bundle.bundle_type_id ∈ bundle_type.id"
  demonstration_bundle_type ||--|{ demonstration : "demonstration.bundle_type_id ∈ demonstration_bundle_type.id"
  bundle ||--|| demonstration : "demonstration.(id, bundle_type_id) ∈ bundle.(id, bundle_type_id)"
  bundle_type ||--|| modification_bundle_type : "modification_bundle_type.id ∈ bundle_type.id"
  bundle_type ||--|| demonstration_bundle_type : "demonstration_bundle_type.id ∈ bundle_type.id"
  modification_status ||--|{ modification : "modification.modification_status_id ∈ modification_status.id"
  modification_bundle_type ||--|{ modification : "modification.bundle_type_id ∈ modification_bundle_type.id"
  modification_bundle_type ||--|{ modification_status: "modification_status.bundle_type_id ∈ modification_bundle_type.id"
  demonstration_status ||--|{ demonstration : "demonstration.demonstration_status_id ∈ demonstration_status.id"
  state ||--|{ demonstration : "demonstration.state_id ∈ state.id"
  demonstration }|--|| users : "demonstration.project_officer_user_id ∈ users.id"
  demonstration ||--|{ modification : "modification.demonstration_id ∈ demonstration.id"
  users ||--|{ user_state : "user_state.user_id ∈ users.id"
  user_state_demonstration }|--|| user_state : "user_state_demonstration.(user_id, state_id) ∈ user_state.(user_id, state_id)"
  state ||--|{ user_state : "user_state.user_id ∈ state.id"
  demonstration ||--|{ user_state_demonstration : "user_state_demonstration.(demonstration_id, state_id) ∈ demonstration.(id, state_id)"
  users ||--|{ event : "event.active_user_id ∈ users.id"
  role ||--|{ user_role : "user_role.role_id ∈ role.id"
  event }|--|| role : "event.active_role_id ∈ role.id"
  users ||--|{ user_role : "user_role.user_id ∈ users.id"
  permission ||--|{ role_permission : "role_permission.permission_id ∈ permission.id"
  role ||--|{ role_permission : "role_permission.role_id ∈ role.id"
  event }O..|| reportable_event_type : "⊂(event.event_type_id) ∈ reportable_event_type.id (unenforced)"

  bundle {
    uuid id PK, UK "UK: (id, bundle_type_id)"
    text bundle_type_id FK, UK "FK: bundle_type.id, UK: (id, bundle_type_id)"
  }

  bundle_type {
    text id PK
    text name
    text description
  }

  cmcs_division {
    text id PK
  }

  signature_level {
    text id PK
  }

  demonstration {
    uuid id PK, FK, UK, UK "FK1: bundle.(id, bundle_type_id) UK1: (id, bundle_type_id), UK2: (id, state_id)"
    text bundle_type_id FK, FK "FK1: bundle.(id, bundle_type_id), FK: demonstration_bundle_type.id"
    text name
    text description
    date effective_date
    date expiration_date
    text cmcs_division_id FK "FK: cmcs_division.id"
    text signature_level_id FK "FK: signature_level.id"
    timestamptz created_at
    timestamptz updated_at
    text demonstration_status_id FK "FK: demonstration_status.id"
    text state_id FK, UK "FK: state.id, UK2: (id, state_id)"
    uuid project_officer_user_id FK "FK: users.id"
  }

  demonstration_bundle_type {
    text id PK, FK "FK: bundle_type.id"
  }

  demonstration_status {
    text id PK
    text name
    text description
    timestamptz created_at
    timestamptz updated_at
  }

  document {
    uuid id PK
    text title
    text description
    text s3_path
    uuid owner_user_id FK "FK: users.id"
    text document_type_id FK "FK: document_type.id"
    uuid bundle_id FK "FK: bundle.id"
    timestamptz created_at
    timestamptz updated_at
  }

  document_type {
    text id PK
  }

  event {
    uuid id PK
    uuid user_id FK "FK: users.id, NULLABLE"
    text with_role_id FK "FK: role.id, NULLABLE"
    text event_type
    text log_level
    text route
    timestamptz created_at
    jsonb event_data
  }

  modification {
    uuid id PK, FK "FK1: bundle.(id, bundle_type_id)"
    text bundle_type_id FK, FK, FK "FK1: bundle.(id, bundle_type_id), FK2: modification_status.(id, bundle_type_id), FK: modification_bundle_type.id"
    uuid demonstration_id FK "FK: demonstration.id"
    text name
    text description
    date effective_date
    date expiration_date
    timestamptz created_at
    timestamptz updated_at
    text modification_status_id FK "FK2: modification_status.(id, bundle_type_id),"
    uuid project_officer_user_id FK "FK: users.id"
  }

  modification_bundle_type {
    text uuid PK, FK "FK: bundle_type.id"
  }

  modification_status {
    text id PK
    text bundle_type_id PK, FK "FK: modification_bundle_type.id"
    text name
    text description
    timestamptz created_at
    timestamptz updated_at
  }

  permission {
    text id PK
    text name
    text description
    timestamptz created_at
    timestamptz updated_at
  }

  reportable_event_type {
    text id PK
    text name
    text description
  }

  role {
    text id PK
    text name
    text description
    timestamptz created_at
    timestamptz updated_at
  }

  role_permission {
    text role_id PK, FK "FK: role.id"
    text permission_id PK, FK "FK: permission.id"
  }

  state {
    text id PK
    text name
  }

  user_role {
    uuid user_id PK, FK "FK: users.id"
    text role_id PK, FK "FK: role.id"
  }

  user_state {
    uuid user_id PK, FK "FK: users.id"
    text state_id PK, FK "FK: state.id"
  }

  user_state_demonstration {
    uuid user_id FK "FK: (user_state.user_id, user_state.state_id)"
    text state_id FK, FK "FK: (user_state.user_id, user_state.state_id)<br>FK: (demonstration.id, demonstration.state_id)"
    uuid demonstration_id FK "FK: (demonstration.id, demonstration.state_id)"
  }

  users {
    uuid id PK
    uuid cognito_subject
    text username
    text email
    text full_name
    text display_name
    timestamptz created_at
    timestamptz updated_at
  }
